--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html, body {
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-image: url("/morning-greeting/videoframe_4270.png");
+    background-image: url("./videoframe_4270.png");
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
